# sx76x-openwrt-danube

./: ProjectHome.md  u-boot.asc  u-boot.patch  uboot-lantiq.tar.bz2
adm6996i driver/: adm6996.c  adm6996.h  adm6996i-compile-warnings
img/: openwrt-lantiq-danube-GIGASX76X-allparts.image
origfw/: active_configfile  bootcode.img  bootcode_a.img  default  dfcg_iptv_HT  ethernet_configfile  passwd
patches/: target.patch  target2.patch
secondary-uboot/: secondary_boot.img  secondary_boot_0x0020000.img  serial log.txt
voip/amazon_daa-0.0.1/: AUTHORS  Makefile  NEWS  build.sh  config.h  (+3 more)
voip/amazon_daa-0.0.1/src/: Makefile  Makefile.am  drv_cpc5621_api.h  drv_cpc5621_common.c  drv_cpc5621_common.c.33.mach  drv_cpc5621_interface.h  drv_cpc5621_io.c  drv_cpc5621_linux.c  drv_cpc5621_noOS.c  drv_cpc5621_noOS.h.mkelem  drv_cpc5621_vxworks.c
voip/drv_amazon-0.0.1/: Makefile  Makefile.am  Makefile.in  autogen.sh  build.sh  config.status  configure  configure.in  drv_amazon-0.0.1.proj  drv_vinboard.wpj  premake
voip/drv_amazon-0.0.1/src/: Makefile  Makefile.am  Makefile.in  amazon_io.h  drv_amazon_api.h  drv_amazon_common.c  drv_amazon_linux.c
voip/drv_amazon-0.0.1/src/common/src/: sys_drv_debug.h
voip/drv_amazon_daa-from_samsung_source/: Makefile.am  build.sh  configure  configure.ac  premake  reconf
voip/drv_amazon_daa-from_samsung_source/doc/: Makefile.am  Makefile.in
voip/drv_amazon_daa-from_samsung_source/m4/: Makefile.am  Makefile.in
voip/drv_amazon_daa-from_samsung_source/src/: Makefile.in  drv_api.h  drv_cpc5621_api.c  drv_cpc5621_api.h  drv_cpc5621_common.c  drv_cpc5621_interface.h  drv_cpc5621_io.c  drv_cpc5621_linux.c  drv_cpc5621_linux.h  drv_cpc5621_noOS.c  sys_drv_linux.h
voip/drv_amazon_daa-from_samsung_source/test/: Makefile.am  Makefile.in  daa.c
voip/drv_vinetic-1.0.13/: Makefile.am  Makefile.in  NEWS  build.sh  configure  configure.in  drv_config.h  drv_config.h.in  drv_config_user.h  drv_version.h  drv_vinetic-1.0.13.proj  drv_vinetic.wpj  premake  vinetic  vinetic.c
voip/drv_vinetic-1.0.13/src/: Makefile  Makefile.am  Makefile.in  drv_tapi_cid.c  drv_tapi_event.c  drv_tapi_linux.c  drv_tapi_opcontrol.c  drv_vineetic_serial.c  drv_vinetic.h  drv_vinetic_api.c  drv_vinetic_api.h  drv_vinetic_basic.c  drv_vinetic_cid.c  drv_vinetic_cid.h  drv_vinetic_con.c  drv_vinetic_con.h  drv_vinetic_cram.c  drv_vinetic_cram.h  drv_vinetic_dspconf.c  drv_vinetic_dwnld.c  drv_vinetic_dwnld.h  drv_vinetic_errno.h  drv_vinetic_gpio.c  drv_vinetic_gr909.h  drv_vinetic_int.c  drv_vinetic_linux.c  drv_vinetic_lt.c  drv_vinetic_lt.h  drv_vinetic_main.c  drv_vinetic_misc.c  drv_vinetic_misc.h  drv_vinetic_parallel.h  drv_vinetic_polled.c  drv_vinetic_polled.h  drv_vinetic_seial.c  drv_vinetic_stream.c  drv_vinetic_stream.h  drv_vinetic_tapi.c  drv_vinetic_tapi.h  drv_vinetic_tone.c  (+5 more)
voip/drv_vinetic-1.0.13/src/bin_images/: Embd_CTRL_2_14.c  Embd_CTRL_3_13.c  dcdwl.h  pramdwl.h
voip/drv_vinetic-1.0.13/src/common/src/: driverlib.h  ifx_types.h  sys_drv_timerlib_vxworks.c
voip/drv_vinetic-1.0.13/src/lib/lib_fifo/: lib_fifo.c
voip/drv_vinetic-1.0.13/src/tapi/src/: drv_tapi.h  drv_tapi_dial.c  drv_tapi_io.h  drv_tapi_linux.c  drv_tapi_misc.c  drv_tapi_noos.h  drv_tapi_ring.c  drv_tapi_voice.c
voip/drv_vinetic-1.0.21/src/: Makefile  Makefile.am  dramfw.c  drv_api.h  drv_config_user.default.h  drv_tapi_cid.c  drv_tapi_dial.c  drv_tapi_event.c  drv_tapi_linux.c  drv_tapi_main.c  drv_tapi_opcontrol.c  drv_tapi_pcm.c  drv_tapi_ring.c  drv_tapi_tone.c  drv_tapi_vxworks.c  drv_vinetic.h  drv_vinetic_api.c  drv_vinetic_api.h  drv_vinetic_basic.c  drv_vinetic_basic.h  drv_vinetic_cid.c  drv_vinetic_con.c  drv_vinetic_dspconf.c  drv_vinetic_dspconf.h  drv_vinetic_dwnld.c  drv_vinetic_gpio.c  drv_vinetic_gpio.h  drv_vinetic_gpio_user.h  drv_vinetic_gr909.c  drv_vinetic_int.c  drv_vinetic_int.h  drv_vinetic_linux.c  drv_vinetic_main.c  drv_vinetic_main.h  drv_vinetic_misc.c  drv_vinetic_parallel.c  drv_vinetic_polled.c  drv_vinetic_serial.c  drv_vinetic_serial.h  drv_vinetic_stream.c  (+7 more)
voip/drv_vinetic-1.0.21/src/bin_images/: Embd_CTRL_3_13.c  Embd_CTRL_4_04.c  acdwl.h  dramdwl.h  phi_VIP.h
voip/drv_vinetic-1.0.21/src/common/src/: sys_drv_defs.h  sys_drv_fifo.h  sys_drv_ifxos.h  sys_drv_noOS.h  sys_drv_timerlib_vxworks.h
voip/drv_vinetic-1.0.21/src/mpc/src/: drv_mpc.h
voip/drv_vinetic-1.0.21/src/tapi/src/: drv_tapi.h  drv_tapi_io.h  drv_tapi_linux.h  drv_tapi_meter.c  drv_tapi_misc.c  drv_tapi_voice.c  drv_tapi_vxworks.h
voip/drv_vinetic-1.1.17/: Makefile.am  Makefile.in  NEWS  build.sh  configure  configure.in  drv_config.h.in  drv_version.h
voip/drv_vinetic-1.1.17/src/: drv_api.h  drv_config_user.default.h  drv_tapi.h  drv_tapi_cid.c  drv_tapi_dial.c  drv_tapi_event.c  drv_tapi_io.h  drv_tapi_linux.c  drv_tapi_linux.h  drv_tapi_main.c  drv_tapi_meter.c  drv_tapi_misc.c  drv_tapi_old_io.h  drv_tapi_opcontrol.c  drv_tapi_pcm.c  drv_tapi_ring.c  drv_tapi_tone.c  drv_tapi_voice.c  drv_tapi_vxworks.c  drv_tapi_vxworks.h  drv_vinetic.h  drv_vinetic_access.c  drv_vinetic_access.h  drv_vinetic_api.c  drv_vinetic_api.h  drv_vinetic_basic.c  drv_vinetic_basic.h  drv_vinetic_bbd.c  drv_vinetic_bbd.h  drv_vinetic_cid.c  drv_vinetic_cid.h  drv_vinetic_con.c  drv_vinetic_con.h  drv_vinetic_dcctl.h  drv_vinetic_dspconf.c  drv_vinetic_dspconf.h  drv_vinetic_dwnld.c  drv_vinetic_dwnld.h  drv_vinetic_errno.h  drv_vinetic_gpio.c  (+34 more)
voip/duslic-0.0.1/src/: Makefile  Makefile.am  Makefile.in  drv_api.h  drv_board.h  drv_duslic_amazon.c  drv_duslic_amazon.h  drv_duslic_api.c  drv_duslic_api.h  drv_duslic_basic.c  drv_duslic_dwnld.c  drv_duslic_dwnld.h  drv_duslic_gpio.c  drv_duslic_gpio.h  drv_duslic_int.c  drv_duslic_linux.c  drv_duslic_main.c  drv_duslic_main.h  drv_duslic_misc.c  duslic_io.h
voip/duslic-0.0.1/src/common/src/: driverlib.h  ifx_types.h  sys_drv_debug.c  sys_drv_debug.h  sys_drv_defs.h  sys_drv_fifo.c  sys_drv_fifo.h  sys_drv_ifxos.h  sys_drv_ose.h  sys_drv_psos.h
wlan/: a2h.c  arteep.h  orig_noeeprom.patch
wlansi/: openwrt-lantiq-danube-GIGASX76X-squashfs.image
(+192 files in other folders)
