#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_REVISION($Revision: 1.9 $)

AC_INIT(VINETIC VINBOARD Board Driver, 0.0.1, , drv_amazon)
AC_CONFIG_SRCDIR([src/drv_amazon_api.c])
AM_INIT_AUTOMAKE

# save the configure arguments
CONFIGURE_OPTIONS="$ac_configure_args"
AC_SUBST(CONFIGURE_OPTIONS)

dnl Set kernel include path
DEFAULT_KERNEL_INCL_PATH='${HOME}/linux/include'
AC_ARG_ENABLE(kernelincl,
   AC_HELP_STRING(
      [--enable-kernelincl=x],
      [Set the target kernel include path]
   ),
   [
      echo Set the LINUX kernel include path $enableval
      AC_SUBST([KERNEL_INCL_PATH],[$enableval])
   ],
   [
      echo Set the default LINUX kernel include path $DEFAULT_KERNEL_INCL_PATH
      AC_SUBST([KERNEL_INCL_PATH],[$DEFAULT_KERNEL_INCL_PATH])
   ]

)

DEFAULT_VINETIC_INCL_PATH='/opt/vineticnew/drv_vinetic-1.0.13/src'
AC_ARG_ENABLE(vineticincl,
   AC_HELP_STRING(
      [--enable-vineticincl=x],
      [Set the vinetic include path]
   ),
   [
      echo Set the VINETIC include path $enableval
      AC_SUBST([VINETIC_INCL_PATH],[$enableval])
   ],
   [
      echo Set the default LINUX kernel include path $DEFAULT_VINETIC_INCL_PATH
      AC_SUBST([VINETIC_INCL_PATH],[$DEFAULT_VINETIC_INCL_PATH])
   ]

)



dnl Enable debugging mode
AM_CONDITIONAL(DEBUG, false)
AC_ARG_ENABLE(debug,
   AC_HELP_STRING(
      [--enable-debug],
      [Enable debug messages]
      ),
      [
         AC_MSG_RESULT(Enable Warnings)
      AM_CONDITIONAL(DEBUG, true)
      ]
)

dnl Enable Warnings
AC_ARG_ENABLE(warnings,
   AC_HELP_STRING(
      [--enable-warnings],
      [Enable Warnings]
   ),
   [
      AC_MSG_RESULT(Enable Warnings)
      CFLAGS="$CFLAGS -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch"
      CFLAGS="$CFLAGS -Wcomment -Wparentheses -Wpointer-arith"
   ]
)

dnl Enable Logs and Traces
AC_ARG_ENABLE(trace,
   AC_HELP_STRING(
      [--enable-trace],
      [Enable Logs and Traces]
   ),
   [
      AC_MSG_RESULT(Enable Logs and Traces)
      CFLAGS="$CFLAGS -DENABLE_TRACE -DENABLE_LOG"
   ]
)

AC_PROG_CC

AM_CFLAGS=

case "${host}" in
   mips_fp_be)
      CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer -G 0 -mno-abicalls -fno-pic -pipe -mtune=r4600 -mips2 -Wa,--trap -DMODVERSIONS -DEXPORT_SYMTAB"
      ;;
   mips-linux)
      CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer -G 0 -mno-abicalls -fno-pic -pipe -mtune=r4600 -mips2 -Wa,--trap -mlong-calls -DMODVERSIONS -DEXPORT_SYMTAB"
      ;;
   mipsel-linux)
      CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer -mno-abicalls -fno-pic -pipe -mips2 -Wa,--trap  -Wa,--trap -D__linux__ -D_MIPS_ISA=6 -D_MIPS_SZLONG=32 -D_MIPS_SZPTR=32 -D_MIPS_SZINT=32 -D__MIPSEL__ -DUTS_MACHINE='"mips"' -mlong-calls"
      ;;
   *)
      ;;
esac



AC_OUTPUT(Makefile src/Makefile)

echo \
"------------------------------------------------------------------------
Configuration:

  Source code location: ${srcdir}
  Compiler:             ${CC}
  Compiler flags:       ${CFLAGS}
  Host System Type:     ${host}
  Install path:         ${prefix}
Settings:
  KERNEL_INCL_PATH:     ${KERNEL_INCL_PATH}
------------------------------------------------------------------------"
